crates/murphy-plugin-macros/tests/ui/fail_cop_duplicate_kind.stderr
error: #[cop]: kind "send" is dispatched to multiple methods
  --> tests/ui/fail_cop_duplicate_kind.rs:14:22
   |
14 |     #[on_node(kind = "send")]
   |                      ^^^^^^

error: #[cop]: kind "send" first declared here
  --> tests/ui/fail_cop_duplicate_kind.rs:10:22
   |
10 |     #[on_node(kind = "send")]
   |                      ^^^^^^

warning: unused import: `murphy_ast::NodeId`
 --> tests/ui/fail_cop_duplicate_kind.rs:1:5
  |
1 | use murphy_ast::NodeId;
  |     ^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `murphy_plugin_api::Cx`
 --> tests/ui/fail_cop_duplicate_kind.rs:2:5
  |
2 | use murphy_plugin_api::Cx;
  |     ^^^^^^^^^^^^^^^^^^^^^
